move judge records to new endpoint
